// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header matches snapshot 1`] = `
<DocumentFragment>
  .c0.c0 {
  margin-bottom: 56px;
}

.c1.c1 {
  color: heading;
  font-size: heading;
  line-height: heading;
}

<div
    class="c0"
  >
    <h1
      class="c1"
    >
      Hello World
    </h1>
  </div>
</DocumentFragment>
`;

exports[`Header with subHeader matches snapshot 1`] = `
<DocumentFragment>
  .c0.c0 {
  margin-bottom: 56px;
}

.c2.c2 {
  color: text;
  font-size: 1px;
}

.c1.c1 {
  color: heading;
  font-size: heading;
  line-height: heading;
}

<div
    class="c0"
  >
    <h1
      class="c1"
    >
      Hello World
    </h1>
    <div
      class="c2"
    >
      …
    </div>
  </div>
</DocumentFragment>
`;
